# university-projects

./: README.md
bpt_investment_process-main/bpt_investment_process-main/: .gitlab-ci.yml  Dockerfile  Investition_Powerpoint.pptx  README.md  demo_message_start_event.ts  demo_message_throwing_event.ts  docker-compose.yaml  launch.sh  package.json  tsconfig.json
imageConvolution/: Bild 1.pgm  Bild 2.pgm  BorderBehavior.cs  ClampingBorderBehavior.cs  Image.cs  KernelFactory.cs  Program.cs  Test.cs  ZeroPaddingBorderBehavior.cs
imageConvolution/Clamped/: Ergebnis 1_horizontal.pgm  Ergebnis 1_vertical.pgm  Ergebnis 2_11.pgm  Ergebnis 2_27.pgm  Ergebnis 2_3.pgm
imageConvolution/ZeroPadded/: Ergebnis 1_horizontal.pgm  Ergebnis 1_vertical.pgm  Ergebnis 2_11.pgm  Ergebnis 2_27.pgm  Ergebnis 2_3.pgm
multithreading/EVP/: .gitignore.txt  Buffer.py  Car.py  Consumer.py  Producer.py  main.py
multithreading/eatingPhilisoph/: Chopstick.py  (+3 more)
odoro-app/: README.md  pubspec.yaml
snake-game-AI/: .gitignore  .pre-commit-config.yaml  GameAI.py  GameHuman.py  QTrainer.py  README.md  agent_dqn.py  agent_ff.py  cuda.py  helper.py  main.py  net.py  pyproject.toml
snake-game-AI/model/: model.pth
snake-game-AI/old/: PathFinder.py  README.md  test_path.py
snake-game-AI/pretrained_models/fast_forward_1000+/: model_ff.pth
snake-game-AI/pretrained_models/fast_forward_1000+/storage/: qtrainer_optim_ff.pkl
snake-game-AI/storage/: memory.pkl  qtrainer_optim_linear.pkl
snake-game-AI/training_results/default/: Result.md
snake-game-AI/training_results/default/model/: model.pth
(+94 files in other folders)
